fix: update banner text for clarity and consistency in messaging

--- a/index.html
+++ b/index.html
@@ -155,44 +155,50 @@ font in use: Poppins, PicNic, and Inclusive Sans
     <div class="banner">
       <div class="banner-track">
         <div class="banner-content">
-          <span class="dot"></span> Taipei Art Book Fair 2025
-          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
-          applied!
+          <span class="dot"></span> 2025 草率季 TPABF
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
+          results for the 2025 TPABF are now available. Please log in to the
+          exhibitor system to check your application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
-          for the latest updates about the fair.
-          <span class="dot"></span> Taipei Art Book Fair 2025
-          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
-          applied!
+          for the latest updates.
+          <span class="dot"></span> 2025 草率季 TPABF
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
+          results for the 2025 TPABF are now available. Please log in to the
+          exhibitor system to check your application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
-          for the latest updates about the fair.
+          for the latest updates.
         </div>
         <div class="banner-content">
-          <span class="dot"></span> Taipei Art Book Fair 2025
-          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
-          applied!
+          <span class="dot"></span> 2025 草率季 TPABF
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
+          results for the 2025 TPABF are now available. Please log in to the
+          exhibitor system to check your application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
-          for the latest updates about the fair.
-          <span class="dot"></span> Taipei Art Book Fair 2025
-          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
-          applied!
+          for the latest updates.
+          <span class="dot"></span> 2025 草率季 TPABF
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
+          results for the 2025 TPABF are now available. Please log in to the
+          exhibitor system to check your application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
-          for the latest updates about the fair.
-          <span class="dot"></span> Taipei Art Book Fair 2025
-          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
-          applied!
+          for the latest updates.
+          <span class="dot"></span> 2025 草率季 TPABF
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
+          results for the 2025 TPABF are now available. Please log in to the
+          exhibitor system to check your application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
-          for the latest updates about the fair.
-          <span class="dot"></span> Taipei Art Book Fair 2025
-          草率季徵件已截止！OPEN CALL is now closed — thanks to everyone who
-          applied!
+          for the latest updates.
+          <span class="dot"></span> 2025 草率季 TPABF
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
+          results for the 2025 TPABF are now available. Please log in to the
+          exhibitor system to check your application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
-          for the latest updates about the fair.
+          for the latest updates.
         </div>
       </div>
     </div>
