fix: extend banner animation duration for smoother scrolling effect

--- a/index.html
+++ b/index.html
@@ -156,46 +156,52 @@ font in use: Poppins, PicNic, and Inclusive Sans
       <div class="banner-track">
         <div class="banner-content">
           <span class="dot"></span> 2025 草率季 TPABF
-          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
-          results for the 2025 TPABF are now available. Please log in to the
-          exhibitor system to check your application status. →→
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→
+          <span class="dot"></span> The selection results for the 2025 TPABF are
+          now available. Please log in to the exhibitor system to check your
+          application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
           for the latest updates.
           <span class="dot"></span> 2025 草率季 TPABF
-          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
-          results for the 2025 TPABF are now available. Please log in to the
-          exhibitor system to check your application status. →→
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→
+          <span class="dot"></span> The selection results for the 2025 TPABF are
+          now available. Please log in to the exhibitor system to check your
+          application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
           for the latest updates.
         </div>
         <div class="banner-content">
           <span class="dot"></span> 2025 草率季 TPABF
-          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
-          results for the 2025 TPABF are now available. Please log in to the
-          exhibitor system to check your application status. →→
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→
+          <span class="dot"></span> The selection results for the 2025 TPABF are
+          now available. Please log in to the exhibitor system to check your
+          application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
           for the latest updates.
           <span class="dot"></span> 2025 草率季 TPABF
-          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
-          results for the 2025 TPABF are now available. Please log in to the
-          exhibitor system to check your application status. →→
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→
+          <span class="dot"></span> The selection results for the 2025 TPABF are
+          now available. Please log in to the exhibitor system to check your
+          application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
           for the latest updates.
           <span class="dot"></span> 2025 草率季 TPABF
-          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
-          results for the 2025 TPABF are now available. Please log in to the
-          exhibitor system to check your application status. →→
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→
+          <span class="dot"></span> The selection results for the 2025 TPABF are
+          now available. Please log in to the exhibitor system to check your
+          application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
           for the latest updates.
           <span class="dot"></span> 2025 草率季 TPABF
-          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→ The selection
-          results for the 2025 TPABF are now available. Please log in to the
-          exhibitor system to check your application status. →→
+          徵件結果已公布，請有報名的單位登入攤商系統查詢。 →→
+          <span class="dot"></span> The selection results for the 2025 TPABF are
+          now available. Please log in to the exhibitor system to check your
+          application status. →→
           <span class="dot" style="background-color: blueviolet"></span>
           請持續關注我們的社群平台，掌握最新活動消息。Follow us on social media
           for the latest updates.
@@ -467,25 +473,5 @@ font in use: Poppins, PicNic, and Inclusive Sans
 
     <script src="js/infolog.js"></script>
     <script src="js/script.js"></script>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const track = document.querySelector(".banner-track");
-        const content = track.querySelector(".banner-content");
-        if (!track || !content) return;
-
-        // 取得 banner-content 寬度
-        const contentWidth = content.offsetWidth;
-        // 取得 banner-track 寬度（可視區域）
-        const trackWidth = track.offsetWidth;
-
-        // 設定每秒移動 60px（可依需求調整速度）
-        const pxPerSec = 60;
-        // 動畫總長度 = (內容寬度 + 可視區域寬度) / pxPerSec
-        const duration = (contentWidth + trackWidth) / pxPerSec;
-
-        // 設定動畫時間
-        track.style.animationDuration = duration + "s";
-      });
-    </script>
   </body>
 </html>
