fix: adjust padding and margin for better layout consistency in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1210,7 +1210,6 @@
                         </div>
                         <div
                           style="
-                            padding-top: 12px;
                             padding-left: 12px;
                             border-top: none;
                             margin: 6px 0;
@@ -1219,7 +1218,8 @@
                           <span class="label">注意事項 Notice</span><br />
                           <ul
                             style="
-                              margin: 0;
+                              margin-top: 10px;
+                              margin-bottom: 5px;
                               padding-left: 20px;
                               font-size: 0.8rem;
                             "
@@ -1590,7 +1590,7 @@
               <!-- <tr style="display: none" id="media-section-row6"></tr> -->
 
               <tr>
-                <td style="border-top: none; border-right: 2px solid black">
+                <td style="border-top: none; border-right: 1px solid black">
                   <span class="label">徵件流程表 Open Call Schedule</span><br />
                   <table style="width: 100%; margin-top: 10px">
                     <tr>
