fix: update shop link to new URL in index.html

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ font in use: Poppins, PicNic, and Inclusive Sans
         >OPEN CALL</a
       >
       <a
-        href="https://taipeiartbookfair.easy.co/"
+        href="https://nmhw.taipeiartbookfair.com/"
         target="_blank"
         class="vertical shop"
         >SHOP</a
