fix: update marketing material instructions for clarity and detail in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1359,11 +1359,9 @@
                     Materials</span
                   >
                   <div id="material-download-annouce-time">
-                    <strong>下載行銷素材包：</strong><br />
-                    若您需要使用草率季官方行銷素材，點此下載檔案。
                     <div id="material-download-desc" style="margin-top: 0.5em">
-                      <strong>下載視覺素材包：</strong><br />
-                      若您需要使用草率季官方行銷素材，點此下載檔案。
+                      <strong>視覺素材包：</strong><br />
+                      歡迎使用 2025 草率季主視覺素材，點此下載檔案。
                     </div>
                     <a
                       id="media-zip-link"
@@ -1372,10 +1370,11 @@
                       >Download</a
                     ><br /><br />
                     <div id="material-upload-desc">
-                      <strong>上傳：</strong><br />
-                      請使用素材包內的官方模板（AI檔）製作，並上傳一張符合格式的圖片，我們將安排社群露出。(書攤需有三本書籍圖片上傳）<br />
-                      📌 格式：JPG、RGB、150 ppi、每單位限 1 張，zip包上傳<br />
-                      ⚠️ 未於期限內上傳，將可能無法安排社群曝光。<br />
+                      <strong>社群宣傳圖檔上傳：</strong><br />
+                      請依照素材包內的說明製作，並將製作完成的<b>貼文、限時動態圖檔</b>打包為
+                      zip上傳。<br />
+                      ⚠️
+                      若未於期限內完成上傳，可能無法安排社群曝光，敬請留意;)<br />
                     </div>
                   </div>
                 </td>
@@ -1472,13 +1471,12 @@
                       style="margin-top: 0.5em; font-size: 1rem"
                       id="catalog-desc"
                     >
-                      單位獲取參展資格即代表可於當年《草率簿 TPABF
-                      Catalog》中露出一面，請使用行銷素材包提供的版型製作，並於期限內完成上傳與左側攤商基本資料修改，逾期視同放棄。<br /><br />
-                      📌 規格：<br />
-                      檔案類型 Format ：PDF（請確認圖片已置入、文字已轉外框）<br />
-                      工作區域 Workspace：140×220mm<br />
-                      四邊出血 Bleed：5mm<br />
-                      色彩 Color Mode: 黑白 B&W<br />
+                      每個參展單位可於本屆《草率簿 TPABF
+                      Catalog》中獲得一面頁面露出，逾期未繳交者將視同放棄刊登權益。<br /><br />
+                      📌 繳交內容如下：<br />
+                      <b>圖檔</b>：PDF 格式，完稿尺寸 120 × 195 mm，需包含 5 mm
+                      出血，色彩請設為黑白。<br />
+                      <b>文字資料</b>：請依左方參展資訊進行修改與補充。<br />
                     </div>
                     <br />
                     <a
@@ -1486,7 +1484,7 @@
                       target="_blank"
                       id="catalog-download-link"
                     >
-                      Download Link
+                      點此公版下載
                     </a>
                   </div>
                 </td>
