fix: display open call schedule based on registration status in dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1573,7 +1573,7 @@
               </tr>
               <!-- <tr style="display: none" id="media-section-row6"></tr> -->
 
-              <tr>
+              <tr style="display: block" id="open-call-schedule">
                 <td style="border-top: none; border-right: 1px solid black">
                   <span class="label">徵件流程表 Open Call Schedule</span><br />
                   <table style="width: 100%; margin-top: 10px">
