--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1415,8 +1415,8 @@
                         style="color: green"
                       ></span> -->
                     </div>
-                    <div id="ddl-material-upload-section" class="ddl"></div>
                   </div>
+                  <div id="ddl-material-upload-section" class="ddl"></div>
                 </td>
               </tr>
 
@@ -1432,8 +1432,8 @@
                     To ensure your materials arrive safely, please make sure to
                     complete the shipping service form and have your package
                     delivered before November 7, 2025 (Fri.) to the designated
-                    address. <br />Late or unregistered shipments will not be
-                    eligible for transfer service. <br /><br />
+                    address. <br /><br />Late or unregistered shipments will not
+                    be eligible for transfer service.
                   </div>
                 </td>
                 <!-- 寄件表格 -->
@@ -1453,11 +1453,8 @@
                         >shipping service form</a
                       >
                     </div>
-                    <div
-                      id="ddl-foreign-shipping-form-section"
-                      class="ddl"
-                    ></div>
                   </div>
+                  <div id="ddl-foreign-shipping-form-section" class="ddl"></div>
                 </td>
               </tr>
 
@@ -1491,11 +1488,8 @@
                         報名表單
                       </a>
                     </div>
-                    <div
-                      id="ddl-media-live-event-form-section"
-                      class="ddl"
-                    ></div>
                   </div>
+                  <div id="ddl-media-live-event-form-section" class="ddl"></div>
                 </td>
               </tr>
 
@@ -1556,13 +1550,13 @@
                       >
                         上傳 Upload</button
                       ><br />
-                      <div id="ddl-catalog-upload-section" class="ddl"></div>
                       <!-- <span
                         id="catalog-upload-status"
                         style="color: green"
                       ></span> -->
                     </div>
                   </div>
+                  <div id="ddl-catalog-upload-section" class="ddl"></div>
                 </td>
               </tr>
 
