fix: improve clarity and conciseness in shipping service instructions and event proposal descriptions

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1428,12 +1428,14 @@
                 >
                   <span class="label">寄件服務 Shipping Service</span>
                   <div id="foreigner-form" style="margin-top: 0.5rem">
-                    <b>Sending in advance</b>：<br />
-                    To ensure your materials arrive safely, please make sure to
-                    complete the shipping service form and have your package
-                    delivered before November 7, 2025 (Fri.) to the designated
-                    address. <br /><br />Late or unregistered shipments will not
-                    be eligible for transfer service.
+                    For those who would like to send their items in advance: To
+                    ensure your materials arrive safely and on time, please
+                    complete the shipping service form first and follow its
+                    instructions. It is important that your package
+                    <u>arrives before</u> November 7, 2025 (Friday) at the
+                    designated address. <br /><br />
+                    Late or unregistered shipments will not be delivered to the
+                    venue.
                   </div>
                 </td>
                 <!-- 寄件表格 -->
@@ -1450,7 +1452,7 @@
                       <a
                         href="https://forms.gle/hVu54wUfqqUMRxfG8"
                         target="_blank"
-                        >shipping service form</a
+                        >Shipping Service Form</a
                       >
                     </div>
                   </div>
@@ -1466,7 +1468,7 @@
                       style="margin-top: 0.5em; font-size: 1rem"
                       id="live-event-desc"
                     >
-                      想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊、DJ等。
+                      想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊等。
                     </div>
                   </div>
                 </td>
