--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1429,9 +1429,9 @@
                   <span class="label">寄件服務 Shipping Service</span>
                   <div id="foreigner-form" style="margin-top: 0.5rem">
                     For those who would like to send their items in advance: To
-                    ensure your materials arrive safely and on time, please
-                    complete the shipping service form first and follow its
-                    instructions. It is important that your package
+                    ensure your items arrive safely and on time, please complete
+                    the shipping service form first and follow its instructions.
+                    It is important that your package
                     <u>arrives before</u> November 7, 2025 (Friday) at the
                     designated address. <br /><br />
                     Late or unregistered shipments will not be delivered to the
