change the file type for uploading marketing materials

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1393,7 +1393,7 @@
                       <input
                         type="file"
                         id="marketing-file"
-                        accept=".jpg,.jpeg"
+                        accept=".zip,.ZIP,.rar,.RAR,.7z,.7Z"
                         style="max-width: 198px"
                       /><br />
                       <button
